--- a/projects/chaos_news/index.html
+++ b/projects/chaos_news/index.html
@@ -1363,10 +1363,10 @@
                             </ul>
                           </li>
                           <li class="menu-item">
-                            <a href="https://vinpearl.com/vi/promotion" data-drupal-link-system-path="taxonomy/term/6318"> Ưu đãi</a>
+                            <a href="#" data-drupal-link-system-path="taxonomy/term/6318"> Ưu đãi</a>
                           </li>
                           <li class="menu-item">
-                            <a href="https://vinpearl.com/vi/news/travel-guide" data-drupal-link-system-path="taxonomy/term/6269">Tin tức</a>
+                            <a href="./tin-tức-như-quỳnh-vinpearl.html" data-drupal-link-system-path="taxonomy/term/6269">Tin tức</a>
                           </li>
                           <li class="menu-item">
                             <a href="https://vinpearl.com/vi/meeting-events" data-drupal-link-system-path="node/49">Hội họp</a>
@@ -1650,7 +1650,7 @@
                     <div class="exp-content wow animate__animated animate__fadeInUp">
                       <div class="exp-item exp-item-1 _741x500">
                         <div class="img-wrapper">
-                          <img loading="lazy" src="https://statics.vinpearl.com/styles/741x500/public/2023_01/Hotels &amp; Resort_1673079062.png.webp?itok=yrxzLyG7" alt="Nghỉ dưỡng">
+                          <img loading="lazy" src="./images/templates/nhuquynhvinpearl-1.jpg?itok=yrxzLyG7" alt="Nghỉ dưỡng" style="width: 750px">
                         </div>
                         <div class="info-wrapper">
                           <div class="exp-item-tit eb-garamond three_dots_1">Nghỉ dưỡng</div>
@@ -1662,7 +1662,7 @@
                       </div>
                       <div class="exp-item exp-item-2 _409x500">
                         <div class="img-wrapper">
-                          <img loading="lazy" src="https://statics.vinpearl.com/styles/409x500/public/2023_01/Amusement Park_1673079085.png.webp?itok=4cFi2wfJ" alt="Vui chơi giải trí">
+                          <img loading="lazy" src="./images/templates/nhuquynhvinpearl-2.jpg" style="width: 386px" alt="Vui chơi giải trí">
                         </div>
                         <div class="info-wrapper">
                           <div class="exp-item-tit eb-garamond three_dots_1">Vui chơi giải trí</div>
@@ -1674,7 +1674,7 @@
                       </div>
                       <div class="exp-item exp-item-3 _409x500">
                         <div class="img-wrapper">
-                          <img loading="lazy" src="https://statics.vinpearl.com/styles/409x500/public/2023_01/Meetings &amp; Events_1673975369.png.webp?itok=i04AFAUz" alt>
+                          <img loading="lazy" src="./images/templates/nhuquynhvinpearl-3.jpg?itok=yrxzLyG7" style="width: 366px" alt>
                         </div>
                         <div class="info-wrapper">
                           <div class="exp-item-tit eb-garamond three_dots_1">Hội họp và sự kiện</div>
@@ -1686,7 +1686,7 @@
                       </div>
                       <div class="exp-item exp-item-4 _741x500">
                         <div class="img-wrapper">
-                          <img loading="lazy" src="https://statics.vinpearl.com/styles/741x500/public/2023_04/vinpearl-golf-hai-phong_1682048866.jpg.webp?itok=WoKF54a4" alt="Golf ">
+                          <img loading="lazy" src="./images/templates/nhuquynhvinpearl-4.jpg?itok=yrxzLyG7" style="width: 708px" alt="Golf ">
                         </div>
                         <div class="info-wrapper">
                           <div class="exp-item-tit eb-garamond three_dots_1">Golf </div>
@@ -1713,7 +1713,7 @@
                       <div class="item-wrapper">
                         <a href="https://vinpearl.com/vi/family-beach-resort">
                           <div class="img-wrapper">
-                            <img loading="lazy" src="https://statics.vinpearl.com/Family Fun_1672982530.jpg" alt="Family Fun">
+                            <img loading="lazy" src="./images/templates/nhuquynhvinpearl-5.jpg?itok=yrxzLyG7" style="width: 378px" alt="Family Fun">
                           </div>
                           <div class="item-info">
                             <div class="item-tit eb-garamond">Gia đình</div>
@@ -1726,7 +1726,7 @@
                       <div class="item-wrapper">
                         <a href="https://vinpearl.com/vi/friend-beach-resort">
                           <div class="img-wrapper">
-                            <img loading="lazy" src="https://statics.vinpearl.com/ban-be_1690371126.jpg" alt>
+                            <img loading="lazy" src="./images/templates/nhuquynhvinpearl-6.jpg?itok=yrxzLyG7" style="width: 378px" alt>
                           </div>
                           <div class="item-info">
                             <div class="item-tit eb-garamond">Nhóm bạn</div>
@@ -1739,7 +1739,7 @@
                       <div class="item-wrapper _3">
                         <a href="https://vinpearl.com/vi/golf-stay-play">
                           <div class="img-wrapper">
-                            <img loading="lazy" src="https://statics.vinpearl.com/golfer_1690370771.jpg" alt>
+                            <img loading="lazy" src="./images/templates/nhuquynhvinpearl-7.jpg?itok=yrxzLyG7" style="width: 448px" alt>
                           </div>
                           <div class="item-info">
                             <div class="item-tit eb-garamond">Golfer</div>
@@ -1750,10 +1750,10 @@
                       <div class="item-wrapper _4">
                         <a href="https://vinpearl.com/vi/couple-retreat">
                           <div class="img-wrapper">
-                            <img loading="lazy" src="https://statics.vinpearl.com/middle-aged_1690370783.jpg" alt>
+                            <img loading="lazy" src="./images/templates/nhuquynhvinpearl-8.jpg?itok=yrxzLyG7" style="width: 448px" alt>
                           </div>
                           <div class="item-info">
-                            <div class="item-tit eb-garamond">Hội đồng niên</div>
+                            <div class="item-tit eb-garamond">Cặp đôi</div>
                             <div class="item-des">Nghỉ dưỡng</div>
                           </div>
                         </a>
