--- a/projects/chaos_news/tin-tức-như-quỳnh-vinpearl.html
+++ b/projects/chaos_news/tin-tức-như-quỳnh-vinpearl.html
@@ -1850,7 +1850,31 @@
                       <div class="views-element-container">
 <div class="view view-news-view view-id-news_view view-display-id-news_listing js-view-dom-id-23d9bafb983dd19b41340b5799feac93f6c5abc21eefc78a0b3b15f039c212f5">
                         <div class="view-content">
-                          <div class="row news-items" id="list-news"><div class="news-item col-md-6 col-sm-12">
+                          <div class="row news-items" id="list-news">
+<div class="news-item col-md-6 col-sm-12">
+                                  <div class="row ht_reset_margin">
+                                    <div class="img-block col-md-12 col-sm-6 ht_reset_pd">
+                                      <div class="img-wrapper img-fit">
+                                        <a href="./b%C3%BAn-qu%E1%BA%ADy-ki%E1%BA%BFn-x%C3%A2y-28-b%E1%BA%A1ch-%C4%91%E1%BA%B1ng---n%C6%A1i-t%C3%ACnh-y%C3%AAu-ph%C3%BA-qu%E1%BB%91c-b%E1%BA%AFt-%C4%91%E1%BA%A7u.html">
+                                          <img src="images/5/bun-quay-kien-xay-phu-quoc-nhuquynhvinpearl.jpg" alt="Bún quậy Kiến Xây 28 Bạch Đằng - Nơi tình yêu Phú Quốc bắt đầu" width="364" height="302" class="ht_mobile_hide">
+                                          <img src="images/5/bun-quay-kien-xay-phu-quoc-nhuquynhvinpearl.jpg" alt="Bún quậy Kiến Xây 28 Bạch Đằng - Nơi tình yêu Phú Quốc bắt đầu" width="164" height="105" class="ht_mobile_show">
+                                        </a>
+                                      </div>
+                                    </div>
+                                    <div class="info-block col-md-12 col-sm-6 ht_reset_pd">
+                                      <div class="info-wrapper">
+                                        <a href="./b%C3%BAn-qu%E1%BA%ADy-ki%E1%BA%BFn-x%C3%A2y-28-b%E1%BA%A1ch-%C4%91%E1%BA%B1ng---n%C6%A1i-t%C3%ACnh-y%C3%AAu-ph%C3%BA-qu%E1%BB%91c-b%E1%BA%AFt-%C4%91%E1%BA%A7u.html">
+                                          <h3 class="news-item-tit three_dots_2">Bún quậy Kiến Xây 28 Bạch Đằng - Nơi tình yêu Phú Quốc bắt đầu</h3>
+                                        </a>
+                                        <div class="data_n_view">
+                                          <span class="date">21:48 24/01/2024</span>
+                                        </div>
+                                        <div class="summary three_dots_2" title="Một món ăn mà bạn nên thưởng thức khi du lịch đảo ngọc Phú Quốc, đó chính là Bún Quậy Kiến Xây tại số 28 Bạch Đằng -  Thị trấn Dương Đông">Một món ăn mà bạn nên thưởng thức khi du lịch đảo ngọc Phú Quốc, đó chính là Bún Quậy Kiến Xây tại số 28 Bạch Đằng -  Thị trấn Dương Đông</div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+<div class="news-item col-md-6 col-sm-12">
                                   <div class="row ht_reset_margin">
                                     <div class="img-block col-md-12 col-sm-6 ht_reset_pd">
                                       <div class="img-wrapper img-fit">
@@ -1872,7 +1896,8 @@
                                       </div>
                                     </div>
                                   </div>
-                                </div></div>
+                                </div>
+</div>
                         </div>
                       </div>
                     </div>
